All activities related to the creation of a new event. 1. All Events 2. New Event 3. Add Participants
General framework and interaction between activites is done.
Functionality yet to be added.

--- a/app/src/main/res/layout/autocomplete_participant_list_item.xml
+++ b/app/src/main/res/layout/autocomplete_participant_list_item.xml
@@ -27,7 +27,7 @@
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@mipmap/ic_default_participant_pic"
-            android:background="@drawable/circluar_plate"
+            android:background="@drawable/circluar_plate_grey"
             android:layout_weight="0.1"/>
 
         <android.support.v4.widget.Space
