--- a/app/src/main/res/layout/new_event.xml
+++ b/app/src/main/res/layout/new_event.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:src="@mipmap/ic_default_event"
-            android:background="@drawable/circluar_plate"
+            android:background="@drawable/circluar_plate_grey"
             android:layout_weight="0.35"/>
 
         <android.support.v4.widget.Space
