--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#00695c</color>
     <color name="colorPrimaryDark">#004d40</color>
-    <color name="colorAccent">@android:color/holo_blue_light</color>
+    <color name="colorAccent">#009688</color>
 
     <color name="darkGreyText">#424242</color>
 </resources>
